--- a/shifts/templates/registration/login.html
+++ b/shifts/templates/registration/login.html
@@ -1,14 +1,21 @@
-<form action="{% url 'login' %}" method="post" accept-charset="utf-8">
+{% load bootstrap %}
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+<p>
+<form action="{% url 'login' %}" method="post" accept-charset="utf-8" class="form-vertical">
     {% csrf_token %}
     {% for field in form %}
         <p>
-        <label>{{ field.label }}</label>
         {% if field.errors %}
             {{ field.errors }}
         {% endif %}
-        {{ field }}
+        {{ field | bootstrap }}
     {% endfor %}
     <p>
-    <input type="hidden" name="next" value="{{ next }}" />
-    <input class="button small" type="submit" value="Submit"/>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
 </form>
