Modified include jquery sources in templates via https instead of http (forgotten CSS resource)

--- a/shifts/templates/shift_change_form.html
+++ b/shifts/templates/shift_change_form.html
@@ -2,7 +2,7 @@
 {% load bootstrap %}
 
 <head>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css"> 
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css"> 
     <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="https://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
