Supported spanish labels in the dates datepicker

--- a/shifts/templates/shift_change_form.html
+++ b/shifts/templates/shift_change_form.html
@@ -10,6 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="{% static 'css/bootstrap-datepicker3.standalone.min.css' %}">
     <script src="{% static 'js/bootstrap-datepicker.min.js' %}"></script>
+    <script src="{% static 'js/locales/bootstrap-datepicker.es.min.js' %}"></script>
     <script type="text/javascript">
        $(document).ready(function() {
            $('.datepicker').datepicker();
