Added a password change access point. For the moment, it gets redirected to the password change Django admin form

--- a/shifts/templates/landing_page.html
+++ b/shifts/templates/landing_page.html
@@ -15,6 +15,7 @@
 <div class="list-group">                                                                                            
     <a href="/login" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/login</b></div><div class="pull-right">Inicia una sesión autenticada con un usuario</div><div class="clearfix"></div></a>
     <a href="/logout" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/logout</b></div><div class="pull-right">Cierra la sesión autenticada con un usuario</div><div class="clearfix"></div></a>
+    <a href="/change_password" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/change_password</b></div><div class="pull-right">Posibilita el cambio de contraseña</div><div class="clearfix"></div></a>    
 </div>
 <p>Las operaciones que modifican el estado de los turnos son:</p>
 <div class="list-group">
