--- a/shifts/templates/landing_page.html
+++ b/shifts/templates/landing_page.html
@@ -6,20 +6,14 @@
 
 <div class="container">
 <h1>medip-shifts</h1>
-<p>Pensadas para ser consumidas como un sencillo API que devuelve un único valor en texto plano, las operaciones de consulta que se proporcionan son:</p>
+<p>Sencillo API de consulta (plain-text), con un par de operaciones básicas que no requieren autenticación:</p>
 <div class="list-group">
-  <a href="/current_week" class="list-group-item list-group-item-action list-group-item-success"><div class="pull-left"><b>/current_week</b></div><div class="pull-right">Obtiene la persona asignada al turno durante la semana actual</div><div class="clearfix"></div></a>
-  <a href="/next_week" class="list-group-item list-group-item-action list-group-item-success"><div class="pull-left"><b>/next_week</b></div><div class="pull-right">Obtiene la persona asignada al turno durante la próxima semana</div><div class="clearfix"></div></a>
+  <a href="/current_week" class="list-group-item list-group-item-action list-group-item-success"><div class="pull-left"><b>/current_week</b></div><div class="pull-right">Obtiene el nombre de la persona asignada al turno en curso</div><div class="clearfix"></div></a>
+  <a href="/next_week" class="list-group-item list-group-item-action list-group-item-success"><div class="pull-left"><b>/next_week</b></div><div class="pull-right">Obtiene el nombre de la persona asignada al turno siguiente</div><div class="clearfix"></div></a>
 </div>
-<p>Relacionadas con el estado de la sesión y para usar de forma interactiva existen:</p>
-<div class="list-group">                                                                                            
-    <a href="/login" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/login</b></div><div class="pull-right">Inicia una sesión autenticada con un usuario</div><div class="clearfix"></div></a>
-    <a href="/logout" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/logout</b></div><div class="pull-right">Cierra la sesión autenticada con un usuario</div><div class="clearfix"></div></a>
-    <a href="/change_password" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/change_password</b></div><div class="pull-right">Posibilita el cambio de contraseña</div><div class="clearfix"></div></a>    
-</div>
-<p>También de uso interactivo, las operaciones que modifican el estado de los turnos son:</p>
+<p>Para poder gestionar los turnos de forma interactiva (requiere autenticación):</p>
 <div class="list-group">
-    <a href="/switch_shifts" class="list-group-item list-group-item-action list-group-item-warning"><div class="pull-left"><b>/switch_shifts</b></div><div class="pull-right">Posibilita el intercambio de turnos entre dos fechas (necesita autenticación)</div><div class="clearfix"></div></a>
-    <a href="/reset" class="list-group-item list-group-item-action list-group-item-danger"><div class="pull-left"><b>/reset</b></div><div class="pull-right">Regenera los turnos iniciales (necesita autenticación). ATENCIÓN: Esta operación es irreversible</div><div class="clearfix"></div></a>
+    <a href="/switch_shifts" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/switch_shifts</b></div><div class="pull-right">Formulario para el intercambio de turnos entre dos fechas</div><div class="clearfix"></div></a>                                                                                            
+    <a href="/change_password" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/change_password</b></div><div class="pull-right">Formulario para cambiar la contraseña del usuario registrado</div><div class="clearfix"></div></a>    
 </div> 
 </div>
