--- a/shifts/templates/landing_page.html
+++ b/shifts/templates/landing_page.html
@@ -8,12 +8,12 @@
 <h1>medip-shifts</h1>
 <p>Sencillo API de consulta (plain-text), con un par de operaciones básicas que no requieren autenticación:</p>
 <div class="list-group">
-  <a href="/current_week" class="list-group-item list-group-item-action list-group-item-success"><div class="pull-left"><b>/current_week</b></div><div class="pull-right">Obtiene el nombre de la persona asignada al turno en curso</div><div class="clearfix"></div></a>
-  <a href="/next_week" class="list-group-item list-group-item-action list-group-item-success"><div class="pull-left"><b>/next_week</b></div><div class="pull-right">Obtiene el nombre de la persona asignada al turno siguiente</div><div class="clearfix"></div></a>
+  <a href="/current" class="list-group-item list-group-item-action list-group-item-success"><div class="pull-left"><b>/current</b></div><div class="pull-right">Obtiene el nombre de la persona asignada al turno en curso</div><div class="clearfix"></div></a>
+  <a href="/next" class="list-group-item list-group-item-action list-group-item-success"><div class="pull-left"><b>/next</b></div><div class="pull-right">Obtiene el nombre de la persona asignada al turno siguiente</div><div class="clearfix"></div></a>
 </div>
 <p>Para poder gestionar los turnos de forma interactiva (requiere autenticación):</p>
 <div class="list-group">
-    <a href="/switch_shifts" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/switch_shifts</b></div><div class="pull-right">Formulario para el intercambio de turnos entre dos fechas</div><div class="clearfix"></div></a>                                                                                            
-    <a href="/change_password" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/change_password</b></div><div class="pull-right">Formulario para cambiar la contraseña del usuario registrado</div><div class="clearfix"></div></a>    
+    <a href="/switch-shifts" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/switch-shifts</b></div><div class="pull-right">Formulario para el intercambio de turnos entre dos fechas</div><div class="clearfix"></div></a>                                                                                            
+    <a href="/change-password" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/change-password</b></div><div class="pull-right">Formulario para cambiar la contraseña del usuario registrado</div><div class="clearfix"></div></a>    
 </div> 
 </div>
