Implemented the 'previous' shift asignment access point

--- a/shifts/templates/landing_page.html
+++ b/shifts/templates/landing_page.html
@@ -10,6 +10,7 @@
 <div class="list-group">
   <a href="/current" class="list-group-item list-group-item-action list-group-item-success"><div class="pull-left"><b>/current</b></div><div class="pull-right">Obtiene el nombre de la persona asignada al turno en curso</div><div class="clearfix"></div></a>
   <a href="/next" class="list-group-item list-group-item-action list-group-item-success"><div class="pull-left"><b>/next</b></div><div class="pull-right">Obtiene el nombre de la persona asignada al turno siguiente</div><div class="clearfix"></div></a>
+  <a href="/previous" class="list-group-item list-group-item-action list-group-item-success"><div class="pull-left"><b>/previous</b></div><div class="pull-right">Obtiene el nombre de la persona asignada al turno anterior</div><div class="clearfix"></div></a>
 </div>
 <p>Para poder gestionar los turnos de forma interactiva (requiere autenticación):</p>
 <div class="list-group">
