Implemented action 'list-next-shifts'

--- a/shifts/templates/landing_page.html
+++ b/shifts/templates/landing_page.html
@@ -14,6 +14,7 @@
 </div>
 <p>Para poder gestionar los turnos de forma interactiva (requiere autenticación):</p>
 <div class="list-group">
+    <a href="/list-next-shifts" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/list-next-shifts</b></div><div class="pull-right">Lista con la asignación de los siguientes turnos</div><div class="clearfix"></div></a>
     <a href="/switch-shifts" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/switch-shifts</b></div><div class="pull-right">Formulario para el intercambio de turnos entre dos fechas</div><div class="clearfix"></div></a>                                                                                            
     <a href="/change-password" class="list-group-item list-group-item-action list-group-item-info"><div class="pull-left"><b>/change-password</b></div><div class="pull-right">Formulario para cambiar la contraseña del usuario registrado</div><div class="clearfix"></div></a>    
 </div> 
