Used naturalday filter to show to list of upcoming shifts

--- a/shifts/templates/shifts/shifts_list.html
+++ b/shifts/templates/shifts/shifts_list.html
@@ -3,6 +3,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 <div class="container">
+{% load humanize %}
 {% block content %}
     <h2>Listado de siguientes turnos</h2>
     <ul class="list-group">
